automate status cron function and make fields req.
